Some stylistic changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/script.js"></script>
 </head>
+
+<!--
+
+    TODO
+
+    * fixa header, input fält...
+
+    * lägg in några test blogginlägg
+
+      bara för att lösa CSS styling etc
+
+-->
+
 <body>
     <header class="rowBox">
         <div>
@@ -17,13 +30,13 @@
             <input id="input-number" type="number" placeholder="0">
         </div>
     </header>
-
     <main>
-        <section class="textBox">
+        <section>
+            <div class="textbox">
             <h4>Test</h4>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officia porro cum itaque dignissimos labore fugit corporis blanditiis omnis, vitae impedit, ut minus fugiat culpa facere nesciunt nam placeat voluptatibus?
-            </p>
+            </p></div>
         </section>
         <section class="textBox">
             <h4>Test</h4>
