Made id edit editable

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section>
-            <div class="textbox">
+            <div class="textbox" id="edit">
             <h4>Test</h4>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officia porro cum itaque dignissimos labore fugit corporis blanditiis omnis, vitae impedit, ut minus fugiat culpa facere nesciunt nam placeat voluptatibus?
