Fixed the textbox

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="col">
             <label for="input-number">Nr of Posts</label>
-            <input id="input-number" type="number" placeholder="0">
+            <input class="inputNr" id="input-number" type="number" placeholder="0">
         </div>
     </header>
     <main>
