--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <h1>Zombie Blogg</h1>
         </div>
         <div class="col">
-            <label for="input-number">Nr of Posts</label>
-            <input class="inputNr" id="input-number" type="number" placeholder="0">
+            <label for="inputNumber">Nr of Posts</label>
+            <input class="inputNr" id="inputNumber" type="number" placeholder="0">
         </div>
     </header>
     <main>
