Made a almost functional createBlogPost

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="col">
             <label for="inputNumber">Nr of Posts</label>
-            <input class="inputNr" id="inputNumber" type="number" placeholder="0">
+            <input class="inputNr" id="inputNumber" type="number" min="0" placeholder="0">
         </div>
     </header>
     <main>
@@ -37,24 +37,6 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officia porro cum itaque dignissimos labore fugit corporis blanditiis omnis, vitae impedit, ut minus fugiat culpa facere nesciunt nam placeat voluptatibus?
             </p></div>
-        </section>
-        <section class="textBox">
-            <h4>Test</h4>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officia porro cum itaque dignissimos labore fugit corporis blanditiis omnis, vitae impedit, ut minus fugiat culpa facere nesciunt nam placeat voluptatibus?
-            </p>
-        </section>
-        <section class="textBox">
-            <h4>Test</h4>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officia porro cum itaque dignissimos labore fugit corporis blanditiis omnis, vitae impedit, ut minus fugiat culpa facere nesciunt nam placeat voluptatibus?
-            </p>
-        </section>
-        <section class="textBox">
-            <h4>Test</h4>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officia porro cum itaque dignissimos labore fugit corporis blanditiis omnis, vitae impedit, ut minus fugiat culpa facere nesciunt nam placeat voluptatibus?
-            </p>
         </section>
     </main>
 
