Removed some test code and comments

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <main>
         <section>
             <div class="textbox" id="edit">
-            <h4>Test</h4>
+            <h4>Detta är bara en testbox</h4>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officia porro cum itaque dignissimos labore fugit corporis blanditiis omnis, vitae impedit, ut minus fugiat culpa facere nesciunt nam placeat voluptatibus?
-            </p></div>
+                Klicka på nummerräknaren för att justera hur många poster som ska finnas här. 
+            </p>
         </section>
     </main>
 
