Testing Save functions (currently not working)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BloggTest</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>    
 </head>
 
 <!--
@@ -20,7 +19,7 @@
 
 -->
 
-<body>
+<body onload="checkEdits()">
     <header class="rowBox">
         <div>
             <h1>Zombie Blogg</h1>
@@ -40,6 +39,7 @@
         </section>
     </main>
 
-    <footer>&copy Magnus Lindgren</footer>    
+    <footer>&copy Magnus Lindgren</footer>
+    <script src="js/script.js"></script>    
 </body>
 </html>
