--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>    
 </head>
 
-<body onload="checkEdits()"> <!-- Kolla med localStorage om det finns sparade inlägg -->
+<body onload="checkEdits()"> <!-- Kolla med localStorage om det finns sparade inlägg. -->
     <header class="rowBox">
         <div>
             <h1>Zombie Blogg</h1>
