--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BloggTest</title>
+    <title>The Official Zombie Blogg</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>    
 </head>
@@ -12,10 +12,11 @@
         <div>
             <h1>Zombie Blogg</h1>
         </div>
-    
         <div class="col">
-            <label for="inputNumber">Nr of Posts</label>
-            <input class="inputNr" id="inputNumber" type="number" min="0" placeholder="0">
+            <div class="rowBox">
+                <label for="inputNumber">Nr of Posts</label>
+                <input class="inputNr" id="inputNumber" type="number" min="0" placeholder="0">
+            </div>
         </div>
     </header>
     <main>
